Tip Calculator - Fixed percent wrapping, changed icon back to % icon, minified and inlined and updated appcache.

--- a/tip_calculator/styles_unminified.css
+++ b/tip_calculator/styles_unminified.css
@@ -63,7 +63,7 @@ p {
   font-size:0.9em
 }
 
-.amountAndPercent {
+.noWhiteSpaceWrap {
   white-space: nowrap;
 }
 
